force-app/main/default/objects/Opportunity/fields/A_o_anterior__c.field-meta.xml
<CustomField>
    <fullName>A_o_anterior__c</fullName>
    <description>Año anterior</description>
    <label>Año anterior</label>
    <type>Date</type>
</CustomField>