force-app/main/default/objects/Opportunity/fields/DSales_Cotizacion_Entregada__c.field-meta.xml
<CustomField>
    <fullName>DSales_Cotizacion_Entregada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotización Entregada</label>
    <type>Checkbox</type>
</CustomField>