force-app/main/default/objects/Opportunity/fields/DSALES_Dias_Transcurridos__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Dias_Transcurridos__c</fullName>
    <formula>DSALES_Fecha_creacion__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Transcurridos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>