force-app/main/default/objects/Opportunity/fields/DSALES_Division__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Division__c</fullName>
    <description>Muestra la división a la que pertenece la oportunidad</description>
    <label>División</label>
    <length>40</length>
    <type>Text</type>
</CustomField>