force-app/main/default/objects/Opportunity/fields/DSales_Duracion_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>DSales_Duracion_de_Garantia__c</fullName>
    <label>Duración de Garantía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Meses</fullName>
            </value>
            <value>
                <fullName>24 Meses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>