force-app/main/default/objects/Opportunity/fields/DSALES_Fecha_creacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha_creacion__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Campo que muestra la fecha de creación de la opoetunidad, este campo es para las pruebas.</description>
    <label>Fecha de creación</label>
    <type>Date</type>
</CustomField>