force-app/main/default/objects/Opportunity/fields/DSALES_Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fecha_Inicio__c</fullName>
    <description>Mostrará la fecha de creación de la oportunidad</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de Inicio</label>
    <type>Date</type>
</CustomField>