force-app/main/default/objects/Opportunity/fields/DSALES_Fechadenacimiento__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fechadenacimiento__c</fullName>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>