force-app/main/default/objects/Opportunity/fields/DSALES_Gerente_de_zona__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Gerente_de_zona__c</fullName>
    <description>Muestra al gerente de zona</description>
    <label>Gerente de zona</label>
    <length>40</length>
    <type>Text</type>
</CustomField>