force-app/main/default/objects/Opportunity/fields/DSales_IDTienda__c.field-meta.xml
<CustomField>
    <fullName>DSales_IDTienda__c</fullName>
    <formula>SyncedQuote.DSales_ID_Tienda__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Tienda</label>
    <type>Text</type>
</CustomField>