force-app/main/default/objects/Opportunity/fields/DSales_IDVendedor__c.field-meta.xml
<CustomField>
    <fullName>DSales_IDVendedor__c</fullName>
    <formula>SyncedQuote.ID_Vendedor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Vendedor</label>
    <type>Text</type>
</CustomField>