force-app/main/default/objects/Opportunity/fields/DSALES_InformaciondePago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_InformaciondePago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información de Pago</label>
    <referenceTo>DSALES_Informaci_n_de_Pago__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>