force-app/main/default/objects/Opportunity/fields/DSales_Ingresos_GEX__c.field-meta.xml
<CustomField>
    <fullName>DSales_Ingresos_GEX__c</fullName>
    <label>Ingresos GEX</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.DSALES_Vendido__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.DSALES_TipoServ__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>