force-app/main/default/objects/Opportunity/fields/DSALES_No_Pagos__c.field-meta.xml
<CustomField>
    <fullName>DSALES_No_Pagos__c</fullName>
    <description>Campo que hace conteo de numero de pagos</description>
    <label>No. Pagos</label>
    <summaryForeignKey>DSALES_Informaci_n_de_Pago__c.DSALES_Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>