force-app/main/default/objects/Opportunity/fields/DSALES_No_Presupuesto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_No_Presupuesto__c</fullName>
    <description>Muestra el número de presupuestos que tiene la opp</description>
    <label>No. Presupuesto</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>