force-app/main/default/objects/Opportunity/fields/DSALES_Nombredelsolicitante__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Nombredelsolicitante__c</fullName>
    <label>Nombre del solicitante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>