force-app/main/default/objects/Opportunity/fields/DSales_NombreVendedor__c.field-meta.xml
<CustomField>
    <fullName>DSales_NombreVendedor__c</fullName>
    <formula>SyncedQuote.DSales_Vendedor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Vendedor</label>
    <type>Text</type>
</CustomField>