force-app/main/default/objects/Opportunity/fields/DSALES_OppPrin__c.field-meta.xml
<CustomField>
    <fullName>DSALES_OppPrin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad principal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>