force-app/main/default/objects/Opportunity/fields/DSales_Pago_Registrado__c.field-meta.xml
<CustomField>
    <fullName>DSales_Pago_Registrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pago Registrado</label>
    <type>Checkbox</type>
</CustomField>