force-app/main/default/objects/Opportunity/fields/DSALES_Periodo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Periodo__c</fullName>
    <description>Muestra el periodo</description>
    <label>Período</label>
    <length>40</length>
    <type>Text</type>
</CustomField>