force-app/main/default/objects/Opportunity/fields/DSales_Posicion_Division__c.field-meta.xml
<CustomField>
    <fullName>DSales_Posicion_Division__c</fullName>
    <label>Posición División</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>