force-app/main/default/objects/Opportunity/fields/DSales_Posicion_Nacional__c.field-meta.xml
<CustomField>
    <fullName>DSales_Posicion_Nacional__c</fullName>
    <label>Posición Nacional</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>