force-app/main/default/objects/Opportunity/fields/DSALES_Region__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Region__c</fullName>
    <description>Muestra la región de la oportunidad</description>
    <label>Región</label>
    <length>40</length>
    <type>Text</type>
</CustomField>