force-app/main/default/objects/Opportunity/fields/DSales_Resumen_Tipo_de_Compra_Producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_Resumen_Tipo_de_Compra_Producto__c</fullName>
    <label>Artículos</label>
    <summaryFilterItems>
        <field>DSALES_InformacionDePago__c.DSALES_TipoCompra__c</field>
        <operation>equals</operation>
        <value>Producto</value>
    </summaryFilterItems>
    <summaryForeignKey>DSALES_InformacionDePago__c.DSALES_Oportunidad__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>