force-app/main/default/objects/Opportunity/fields/DSALES_Tienda__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tienda__c</fullName>
    <description>Muestra la tienda a la que corresponde la oportunidad</description>
    <label>Tienda</label>
    <length>40</length>
    <type>Text</type>
</CustomField>