force-app/main/default/objects/Opportunity/fields/Folio_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Folio_de_oportunidad__c</fullName>
    <displayFormat>Op-{000000000}</displayFormat>
    <label>Folio de oportunidad</label>
    <type>AutoNumber</type>
</CustomField>