force-app/main/default/objects/Opportunity/fields/Ingresos_GEX_A_o_anterior__c.field-meta.xml
<CustomField>
    <fullName>Ingresos_GEX_A_o_anterior__c</fullName>
    <description>Ingresos GEX Año anterior</description>
    <label>Ingresos GEX Año anterior</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>