force-app/main/default/objects/Opportunity/fields/Muebles__c.field-meta.xml
<CustomField>
    <fullName>Muebles__c</fullName>
    <description>Muebles</description>
    <label>Muebles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>