force-app/main/default/objects/Opportunity/fields/Posici_n__c.field-meta.xml
<CustomField>
    <fullName>Posici_n__c</fullName>
    <label>Posición</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>