force-app/main/default/objects/Opportunity/fields/Tipo_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_servicio__c</fullName>
    <label>Tipo de servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GEX</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>