force-app/main/default/objects/Opportunity/recordTypes/DSales_Garantia_Extendida.recordType-meta.xml
<RecordType>
    <fullName>DSales_Garantia_Extendida</fullName>
    <active>true</active>
    <businessProcess>Garantia Extendida</businessProcess>
    <description>Crea las oportunidades para el proceso de Garantía Extendida para grupo Coppel</description>
    <label>Garantía Extendida</label>
</RecordType>