force-app/main/default/objects/Opportunity/recordTypes/DSALES_Oportunidad.recordType-meta.xml
<RecordType>
    <fullName>DSALES_Oportunidad</fullName>
    <active>true</active>
    <businessProcess>FinServ__Opportunity Process</businessProcess>
    <label>Oportunidad</label>
</RecordType>