force-app/main/default/objects/Opportunity/recordTypes/FinServ__RetirementPlanning.recordType-meta.xml
<RecordType>
    <fullName>FinServ__RetirementPlanning</fullName>
    <active>true</active>
    <businessProcess>FinServ__Wallet Share</businessProcess>
    <label>Retirement Planning</label>
</RecordType>