force-app/main/default/objects/Opportunity/recordTypes/Seguro_de_Moto.recordType-meta.xml
<RecordType>
    <fullName>Seguro_de_Moto</fullName>
    <active>true</active>
    <businessProcess>Garantia Extendida</businessProcess>
    <description>Crea las oportunidades para el proceso de Seguro de Motos del grupo Coppel</description>
    <label>Seguro de Moto</label>
</RecordType>