force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SYNCEDQUOTE.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Tipo_de_servicio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las oportunidades</label>
</ListView>