force-app/main/default/objects/Opportunity/listViews/Oportunidades_mayores_a_30_000.listView-meta.xml
<ListView>
    <fullName>Oportunidades_mayores_a_30_000</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>SYNCEDQUOTE.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>Tipo_de_servicio__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo_de_servicio__c</field>
        <operation>equals</operation>
        <value>SM</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.AMOUNT</field>
        <operation>greaterThan</operation>
        <value>30000</value>
    </filters>
    <label>Oportunidades mayores a $30.000</label>
</ListView>